--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,20 @@ jobs:
     needs: build-physfs_jni
     steps:
     - uses: actions/checkout@v2
+    - uses: coursier/setup-action@v1
+      with:
+        jvm: graalvm-ce-java11:20.3.0
+    - uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+    - name: Set GRAALVM_HOME
+      shell: pwsh
+      run: |
+        $graalvm_home = cs java-home graalvm-ce-java11:20.3.2
+        echo "GRAALVM_HOME=$graalvm_home" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+    - uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x86
     - uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
@@ -158,8 +172,7 @@ jobs:
       run: Get-ChildItem physfs_java
       shell: pwsh
     - name: Build
-      working-directory: physfs_java
-      run: '../gradlew.bat jar'
+      run: './gradlew.bat :physfs_java:jar'
     - uses: actions/upload-artifact@v2
       with:
         name: physfs_java_jar
