--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         arch: x86
     - name: Set LIBCLANG_PATH
-      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + '\Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + 'Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: launcher
       run: cargo build
@@ -74,7 +74,7 @@ jobs:
       with:
         arch: x86
     - name: Set LIBCLANG_PATH
-      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + '\Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + 'Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: physfs_jni
       run: cargo build
@@ -109,7 +109,7 @@ jobs:
       with:
         arch: x86
     - name: Set LIBCLANG_PATH
-      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + '\Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      run: echo $('LIBCLANG_PATH=' + $env:VCINSTALLDIR + 'Tools\Llvm\bin') | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - name: Build (debug)
       working-directory: physfs_rts
       run: cargo build
@@ -284,14 +284,15 @@ jobs:
       with:
         name: release_jre
         path: jre
+    - name: Add Inno Setup to PATH
+      run: echo "%PROGRAMFILES(X86)%\Inno Setup 6" >> %GITHUB_PATH%
+      shell: cmd
     - name: Create debug installer
-      run: |
-        "%PROGRAMFILES(X86)%\Inno Setup 6\iscc.exe" /Oinstaller\output installer\openil2-debug.iss
-      shell: cmd
+      run: iscc /Oinstaller\output installer\openil2-debug.iss
+      shell: pwsh
     - name: Create release installer
-      run: |
-        "%PROGRAMFILES(X86)%\Inno Setup 6\iscc.exe" /Oinstaller\output installer\openil2.iss
-      shell: cmd
+      run: iscc /Oinstaller\output installer\openil2.iss
+      shell: pwsh
     - uses: actions/upload-artifact@v2
       with:
         name: installer_exes
