--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -287,6 +287,12 @@ jobs:
     - name: Add Inno Setup to PATH
       run: echo "%PROGRAMFILES(X86)%\Inno Setup 6" >> %GITHUB_PATH%
       shell: cmd
+    - name: Set release version
+      run: echo $("RELEASE_VERSION=" + $(git describe --tags)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      shell: pwsh
+    - uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x86
     - name: Create debug installer
       run: iscc /O%GITHUB_WORKSPACE%\installer\output %GITHUB_WORKSPACE%\installer\openil2-debug.iss
       shell: cmd
@@ -307,10 +313,13 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: installer_exes
+    - name: Set release version
+      run: echo $("RELEASE_VERSION=" + $(git describe --tags)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      shell: pwsh
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
       with:
-        name: OpenIL2 v${{ github.ref }}
+        name: OpenIL2 v${{ env.RELEASE_VERSION }}
         draft: true
         files: |
           openil2-installer.*.exe
