--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,35 +157,19 @@ jobs:
     needs: build-physfs_jni
     steps:
     - uses: actions/checkout@v2
-    - uses: coursier/setup-action@v1
-      with:
-        jvm: graalvm-ce-java11:20.3.0
-    - uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x64
-    - name: Set GRAALVM_HOME
-      shell: pwsh
-      run: |
-        $graalvm_home = cs java-home graalvm-ce-java11:20.3.2
-        echo "GRAALVM_HOME=$graalvm_home" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
-    - uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x86
     - uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
         java-version: '11'
         architecture: x86
-        cache: 'gradle'
     - uses: actions/download-artifact@v2
       with:
         name: physfs_jni_dll
         path: physfs_java
-    - name: List directory
-      run: Get-ChildItem physfs_java
-      shell: pwsh
-    - name: Build
-      run: './gradlew.bat --no-daemon :physfs_java:jar'
+    - uses: gradle/gradle-build-action@v2
+      with:
+        arguments: jar
+        build-root-directory: physfs_java
     - uses: actions/upload-artifact@v2
       with:
         name: physfs_java_jar
@@ -209,7 +193,8 @@ jobs:
         echo "GRAALVM_HOME=$graalvm_home" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
     - uses: gradle/gradle-build-action@v2
       with:
-        arguments: ':classload_agent:jar :classload_agent:nativeImage'
+        arguments: 'jar nativeImage'
+        build-root-directory: classload_agent
     - uses: actions/upload-artifact@v2
       with:
         name: classload_agent_exe
@@ -289,7 +274,7 @@ jobs:
       run: echo "%PROGRAMFILES(X86)%\Inno Setup 6" >> %GITHUB_PATH%
       shell: cmd
     - name: Set release version
-      run: echo $("RELEASE_VERSION=" + $(git describe --tags)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      run: echo $("RELEASE_VERSION=" + $(git describe --tags --always)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
       shell: pwsh
     - uses: ilammy/msvc-dev-cmd@v1
       with:
@@ -315,7 +300,7 @@ jobs:
       with:
         name: installer_exes
     - name: Set release version
-      run: echo $("RELEASE_VERSION=" + $(git describe --tags)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      run: echo $("RELEASE_VERSION=" + $(git describe --tags --always)) | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
       shell: pwsh
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
